# FastICRL

./: .gitignore  LICENSE  Makefile  README.md  agent.md  pyproject.toml
.github/workflows/: python-publish.yml
research/hellaswag/data/: .gitkeep
research/icle/: README.md
src/fasticrl/: __init__.py  fasticrl.py  icrl_learner.py  prompts.py  runtime.py
src/fasticrl/learner/: core.py  prompts.py
src/fasticrl/learner/models/: learn_output.py
src/fasticrl/model_providers/: ollama.py  openai.py
src/fasticrl/models/: agent_save_state.py  attempt.py  icrl_mode.py  learning_output.py  model_provider.py  openai.py  sentinel.py
src/fasticrl/reward/: core.py  prompts.py
src/fasticrl/reward/models/: reward_output.py
src/fasticrl/strategist/: core.py  prompts.py
src/fasticrl/strategist/models/: strategy_output.py
test/: conftest.py  test.py  test_icrl_learner.py  test_learner_agent.py  test_models.py  test_reward_agent.py  test_strategist_agent.py
