[project]
name = "fasticrl"
version = "0.1.0pre"
description = "Easy way to create ICRL context for LLMs."
readme = "README.md"
authors = [
    { name = "Maximilian König", email = "maximilian.koenig@mein.gmx" }
]
requires-python = ">=3.13"
dependencies = [
    "agno>=2.6.5",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
