[project]
name = "fasticrl"
version = "1.0.0"
description = "In-Context Reinforcement Learning framework for LLMs — no fine-tuning required."
keywords = [
    "reinforcement-learning",
    "in-context-learning",
    "icrl",
    "llm",
    "ai",
    "agents",
    "prompt-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
authors = [
    { name = "Maximilian König", email = "maximilian.koenig@mein.gmx" }
]
requires-python = ">=3.13"
dependencies = [
    "agno>=2.6.5",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
openai = ["openai>=2.32.0"]
ollama = ["ollama>=0.6.2"]

[project.urls]
Homepage = "https://github.com/makoeta/FastICRL"
Source = "https://github.com/makoeta/FastICRL"
Issues = "https://github.com/makoeta/FastICRL/issues"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
